--- a/request-collection/users.posting.yaml
+++ b/request-collection/users.posting.yaml
@@ -5,7 +5,7 @@ url: http://localhost:8080/graphql
 body:
   content: |-
     {
-      "query": "query users { users { id username team {id} createdAt }}"
+      "query": "query users { users { id username team {id name createdAt} createdAt }}"
     }
   content_type: application/json
 headers:
