--- a/back/src/main/resources/application.properties
+++ b/back/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=graphql-test
 spring.graphql.websocket.path=/graphql
 spring.graphql.graphiql.enabled=true
-
+spring.jpa.hibernate.ddl-auto=create-drop
 logging.level.com.example.greeting=DEBUG
 logging.level.org.springframework.graphql=TRACE
 logging.level.org.springframework.security=TRACE
