--- a/request-collection/user-by-id.posting.yaml
+++ b/request-collection/user-by-id.posting.yaml
@@ -5,7 +5,7 @@ url: http://localhost:8080/graphql
 body:
   content: |-
     {
-      "query": "query userById { userById(id: 1) { id username team {id name createdAt} createdAt }}"
+      "query": "query GetUser { GetUser(id: 1) { id username team {id name createdAt} createdAt }}"
     }
   content_type: application/json
 headers:
