--- a/request-collection/get-teams.posting.yaml
+++ b/request-collection/get-teams.posting.yaml
@@ -5,7 +5,7 @@ url: http://localhost:8080/graphql
 body:
   content: |-
     {
-      "query": "query teams { teams { id name createdAt } }"
+      "query": "query GetAllTeams { GetAllTeams { id name createdAt } }"
     }
   content_type: application/json
 headers:
