--- a/request-collection/team-create.posting.yaml
+++ b/request-collection/team-create.posting.yaml
@@ -1,10 +1,10 @@
-name: user create
+name: team create
 method: POST
 url: http://localhost:8080/graphql
 body:
   content: |-
     {
-      "query": "mutation CreateUser { CreateUser(user: { username: \"Polygone\", teamId: 1}) { id username team { id name createdAt } createdAt } }"
+      "query": "mutation CreateTeam { CreateTeam( team: { name: \"my new team\" } ) { id name createdAt } }"
     }
   content_type: application/json
 headers:
