feat: (working) create get and getall tasks

--- a/back/src/main/resources/application.properties
+++ b/back/src/main/resources/application.properties
@@ -8,3 +8,4 @@ logging.level.org.springframework.security=TRACE
 
 spring.devtools.restart.enabled=false
 # spring.security.oauth2.resourceserver.jwt.public-key-location=classpath:simple.pub
+mapstruct.verbose=true
