--- a/request-collection/user-create.posting.yaml
+++ b/request-collection/user-create.posting.yaml
@@ -2,9 +2,9 @@ name: user create
 method: POST
 url: http://localhost:8080/graphql
 body:
-  content: |-
-    {
-      "query": "mutation CreateUser { CreateUser(user: { username: \"Polygone\", teamId: 1}) { id username team { id name createdAt } createdAt } }"
+  content: |2-
+        {
+      "query": "mutation CreateUser { CreateUser(user: { username: \"Polygone\", teamId: 1, taskTypes: [\"issue\"]}) { id username team { id name createdAt } taskTypes createdAt } }"
     }
   content_type: application/json
 headers:
